--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML5 Template">
     <meta name="description" content="Responsive HTML5 Template">
     <meta name="author" content="author.com">
-    <title>Responsive HTML5 Template</title>
+    <title>Chishti Chats</title>
 
     <!-- STYLESHEET -->
     <!-- fonts -->
@@ -16,6 +16,11 @@
     <!-- icon -->
     <link rel="stylesheet" href="fonts/icons/main/mainfont/style.css">
     <link rel="stylesheet" href="fonts/icons/font-awesome/css/font-awesome.min.css">
+
+    <!-- Favicon -->
+    <link rel="icon" href="images/cc favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/CHISHTI CHATS modfied.png">
+
 
     <!-- Vendor -->
     <link rel="stylesheet" href="vendor/bootstrap/v3/bootstrap.min.css">
@@ -36,10 +41,10 @@
             <div class="container">
                 <div class="header__logo">
                     <h1>
-                        <img src="fonts/icons/main/Logo_Forum.svg" alt="logo">
+                        <img src="images/CHISHTI CHATS modfied.png" alt="logo">
                     </h1>
                     <div class="header__logo-btn" data-dropdown-btn="logo">
-                        Unity<i class="icon-Arrow_Below"></i>
+                        Chishti Chats<i class="icon-Arrow_Below"></i>
                     </div>
                     <nav class="dropdown dropdown--design-01" data-dropdown-list="logo">
                         <ul class="dropdown__catalog">
@@ -76,7 +81,7 @@
                                 <label>
                                     <label class="custom-checkbox">
                                         <input type="checkbox">
-                                        <i></i>
+                                        <i>  </i>
                                     </label>Show Results as Posts
                                 </label>
                             </li>
@@ -170,7 +175,7 @@
                 <div class="header__user">
                     <div class="header__user-btn" data-dropdown-btn="user">
                         <img src="fonts/icons/avatars/A.svg" alt="avatar">
-                        azyrusmax<i class="icon-Arrow_Below"></i>
+                        Login / Signup <i class="icon-Arrow_Below"></i>
                     </div>
                     <nav class="dropdown dropdown--design-01" data-dropdown-list="user">
                         <div>
@@ -184,15 +189,15 @@
                         <div>
                             <ul class="dropdown__catalog">
                                 <li><a href="#">Dashboard</a></li>
-                                <li><a href="#">Badges</a></li>
+                                <li><a href="#">Badges</a></ii>
                                 <li><a href="#">My Groups</a></li>
                                 <li><a href="#">Notifications</a></li>
                                 <li><a href="#">Topics</a></li>
                                 <li><a href="#">Likes</a></li>
                                 <li><a href="#">Solved</a></li>
-                            </ul>
+                            </ul> 
                         </div>
-                    </nav>
+                    </nav> 
                 </div>
             </div>
             <div class="header__offset-btn">
@@ -200,6 +205,8 @@
             </div>
         </div>
     </header>
+
+    
 
     <!-- MAIN -->
     <main>
